# GameSystemsInC

./: .gitignore  README.md  TileMap.cbp  TileMap.cpp  TileMap.depend  TileMap.h  TileMap.layout  TileMapWIP.txt  TileSet.cpp  TileSet.h  autotile.h  main.cpp  tilemap.h  tileset.h  vec2.h
Example/: Build_AutoTile_test.bat  Build_TileMap_spread_parallax.bat  Build_TileMap_test.bat  Build_TileSet_bitmask_editor.bat  Test_AutotTile.c  Test_TileMap.c  Test_TileMap_spread_parallax.c  Test_TileSet_bitmask_editor.c  ViewCulling.c  build.bat
FlexRect/: README.md  flexrect.h
FlexRect/example/: CMakeLists.txt  FlexExample.c  Makefile  main.c
HitboxCollision/: README.md  hitbox_collision.h  introspective_sort.h
HitboxCollision/Example/: CMakeLists.txt  HitboxExample.c  Test_collision_axis.c  Test_collision_direction.c  Test_dynamic_rect_vs_rect.c  Test_raycast.c  Test_resolve_dynamic_rect_vs_rect.c  main.c
ParticleSystem/: particle_system.h
ParticleSystem/example/: Makefile  main.c
Resource/: TileSetterBitmask.h  grass_and_dirt_tiles.ase
SpriteSystem/: README.md  sprite.h  sprite_raylib.h  sprite_rect.h
SpriteSystem/examples/: .gitignore  CMakeLists.txt  CmakeLists.txt  demo.c  main.c  make.bat  sprite_raylib.c  sprite_rect_raylib.c
StateMachine/: README.md  statemachine.h
StateMachine/example/: CMakeLists.txt  Makefile  StateExample.c  main.c
TileMapSystem/: README.md  autotile.h  tilemap.h  tileset.h
TileMapSystem/Example/: CmakeLists.txt  Makefile  README.md  Test_AutoTile.c  Test_AutotTile.c  Test_TileMap.c  Test_TileMap_spread_parallax.c  Test_TileSet_bitmask_editor.c  clean.bat  make.bat
TileMapSystem/Example/Resource/: TileSetBitmask.h
ViewportScaling/: README.md  README>md  viewport_scaling.h
ViewportScaling/Example/: CmakeLists.txt  ViewportExample.c  drag-make.bat  main.c
app_template/: CMakeLists.txt  demo.c
sound_effect/: README.md  sound_effect.h  sound_effect_raylib.h
sound_effect/examples/: CMakeLists.txt  demo.c
